name:              cabaltest
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 --, yesod-platform                >= 1.2.4.2    && < 1.3
                 , yesod                         >= 1.2        && < 1.3
                 , yesod-core                    >= 1.2.2      && < 1.3
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.2        && < 1.3
                 , persistent-postgresql         >= 1.2        && < 1.3
                 , persistent-template           >= 1.2        && < 1.3
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.2        && < 1.3
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.9.4      && < 1.10
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 1.3        && < 1.4
                 , data-default
                 , aeson
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 0.3
                 , wai                           >= 1.4        && < 1.5
                 , blaze-builder                 >= 0.3.1      && < 0.3.2
                 , blaze-html                    >= 0.6        && < 0.7
                 , transformers                  >= 0.3        && < 0.4
                 , starling                      >= 0.4
                 , resourcet                     >= 0.4.4      && < 0.5
                 , base64-bytestring             >= 1.0        && < 1.1
                 , http-types                    >= 0.7.3      && < 0.9
                 , network                       >= 2.4        && < 2.5
                 , unix-time                     >= 0.2        && < 0.3
                 , data-ordlist                  >= 0.4.5      && < 0.5
                 , errors                        >= 1.4        && < 1.5
                 , crypto-pubkey                 >= 0.2        && < 0.3
                 , crypto-pubkey-types           >= 0.4        && < 0.5
                 , crypto-random                 >= 0.0.5      && < 0.1
                 , cprng-aes                     >= 0.5        && < 0.6
                 , crypto-api                    >= 0.12       && < 0.13
                 , cryptohash-cryptoapi
                 , cryptohash                    >= 0.10       && < 0.11
                 , tagged                        >= 0.7        && < 0.8
                 , asn1-types                    >= 0.2        && < 0.3
                 , asn1-encoding                 >= 0.8        && < 0.9
                 , pem                           >= 0.1
                 , certificate                   >= 1.3
                 , binary                        >= 0.5        && < 0.7
                 , text-binary
                 , cereal                        >= 0.3.5      && < 0.4
                 , smtp-mail                     >= 0.1.4
                 , mime-mail
                 , uuid                          >= 1.2.6
                 , async                         >= 2.0.1.0
                 , yesod-auth-fb                 >= 1.6
                 , fb
                 , yesod-fb                      >= 0.3
                 , crypto-conduit                >= 0.5
                 , old-locale
                 , time                          >= 1.4
                 , temporary                     >= 1.1
                 , case-insensitive
                 , timers                        >= 0.2       && < 0.3
                 , suspend                       >= 0.1       && < 0.2
                 , pwstore-fast                  >= 2.3       && < 2.4

executable         cabaltest
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , cabaltest
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , cabaltest
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
